--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -35,4 +36,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.style{
+  background-color: rgba(60, 61, 61, 0.863);
+}
+
+/* @font-face{
+  font-family: 'SEGA LOGO FONT';
+  font-style: normal;
+  font-weight: normal;
+  src: local('SEGA LOGO FONT'), url('SEGA.TTF'), format('TTF');
+} */
+.title{
+  font-family: 'Courier New', Courier, monospace;
 }
