--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -1,13 +1,18 @@
-.style{
-    background-color: rgba(60, 61, 61, 0.863);
+.container-fluid{
+    margin: 0px 0px;
+    width: 100%;
+    padding: 0px 0px;
+    /* display: flex; */
+    /* flex-flow: column; */
+    
 }
 
-/* @font-face{
-    font-family: 'SEGA LOGO FONT';
-    font-style: normal;
-    font-weight: normal;
-    src: local('SEGA LOGO FONT'), url('SEGA.TTF'), format('TTF');
-} */
-.title{
-    font-family: 'SEGA LOGO FONT';
+.jumbotron{
+    margin: 2px 0px;
+    width: 100%;
+    /* display: flex;
+    flex: 0 0 100%;
+    flex-flow: column; */
+    height:auto
 }
+
