--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -5,6 +5,10 @@
   font-size:15px;
   line-height:24px;
   color:#737373;
+  position:static;
+  bottom: 0;
+  /* z-index: 1000; */
+  /* clear: both; */
 }
 .site-footer hr
 {
@@ -164,7 +168,7 @@
 
 .topBottomMargin{
     padding : 3% 0;
-    background-color:#26272b88;
+    background-color:rgba(51, 50, 50, 0.76);
 }
 
 .wrap{
