--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -1,18 +1,79 @@
+@import url('https://fonts.googleapis.com/css?family=Caveat|Righteous&display=swap');
+.des {
+	 background: black;
+	 width: 100%;
+	 height: 100vh;
+	 display: flex;
+	 align-items: center;
+	 justify-content: center;
+	 flex-direction: column;
+}
+ h1 {
+	 font-family: 'Righteous', cursive;
+	 background: url('https://media.giphy.com/media/DvyxIpxw9cCuQ/giphy.gif') center center no-repeat;
+	 -webkit-background-clip: text;
+	 -webkit-text-fill-color: transparent;
+	 font-size: 4rem;
+	 letter-spacing: 10px;
+	 background-size: cover;
+	 margin: 0px;
+	 color: transparent;
+}
+.fontdes {
+	 /* font-family: 'Courier New'; */
+	 color: transparent;
+	 font-size: 1rem;
+	 letter-spacing: 3px;
+     margin: 0px;
+     padding-top: 2rem;
+	 background: rgb(224, 224, 224);
+	 -webkit-background-clip: text;
+}
+ 
+
 .container-fluid{
     margin: 0px 0px;
     width: 100%;
     padding: 0px 0px;
-    /* display: flex; */
+    /* display: block; */
     /* flex-flow: column; */
-    
+    /* background-color: rgba(39, 39, 39, 0.658); */
 }
+/* .boxcont{ */
+    /* height: auto; */
+/* } */
 
 .jumbotron{
-    margin: 2px 0px;
+    /* position: absolute; */
+    margin: 0px 0px;
     width: 100%;
     /* display: flex;
     flex: 0 0 100%;
     flex-flow: column; */
+    background-color: rgba(59, 59, 59, 0.541);
     height:auto
 }
 
+.rempad{
+    padding: 0 0;
+}
+
+.frame {
+    height: 90vh;
+    width: 90vw;
+    margin: 5vh 5vw;
+    background-color: rgba(238, 238, 238, 0);
+    background-position: center;
+    background-size: cover;
+    
+    animation: image 2s infinite alternate;
+  }
+  
+  @keyframes image {
+    0% {
+      background-image: url('https://unsplash.it/600/600');
+    }
+    100% {
+      background-image: url('https://unsplash.it/601/601');
+    }
+  }
