--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -10,7 +10,7 @@
 }
  h1 {
 	 font-family: 'Righteous', cursive;
-	 background: url('https://media.giphy.com/media/DvyxIpxw9cCuQ/giphy.gif') center center no-repeat;
+	 background: url('https://media.giphy.com/media/FE0WTM8BG754I/giphy.gif') center center no-repeat;
 	 -webkit-background-clip: text;
 	 -webkit-text-fill-color: transparent;
 	 font-size: 4rem;
@@ -25,7 +25,7 @@
 	 font-size: 1rem;
 	 letter-spacing: 3px;
      margin: 0px;
-     padding-top: 2rem;
+     padding: 2rem 0;
 	 background: rgb(224, 224, 224);
 	 -webkit-background-clip: text;
 }
