--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -10,14 +10,14 @@
 }
  h1 {
 	 font-family: 'Righteous', cursive;
-	 background: url('https://media.giphy.com/media/FE0WTM8BG754I/giphy.gif') center center no-repeat;
-	 -webkit-background-clip: text;
-	 -webkit-text-fill-color: transparent;
+	 /* background: url('https://media.giphy.com/media/FE0WTM8BG754I/giphy.gif') center center no-repeat; */
+	 /* -webkit-background-clip: text; */
+	 /* -webkit-text-fill-color: transparent; */
 	 font-size: 4rem;
 	 letter-spacing: 10px;
 	 background-size: cover;
 	 margin: 0px;
-	 color: transparent;
+	 color:rgb(224, 224, 224);
 }
 .fontdes {
 	 /* font-family: 'Courier New'; */
