--- a/client/src/css/ImgSlider.css
+++ b/client/src/css/ImgSlider.css
@@ -20,7 +20,7 @@
     background-position: center;
     background-size: cover;
     
-    animation: image 3s infinite alternate;
+    animation: image 3s ease-in-out infinite alternate;
   }
   
   @keyframes image {
