--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -2,10 +2,17 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat';
-  background: linear-gradient(89deg, rgb(153, 233, 229) 0%, rgb(0, 66, 92) 100%);
+  background: linear-gradient(89deg, rgb(62, 123, 255) 0%, rgb(255, 255, 255) 100%);
 }
 
-
+.particles {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -5;
+}
 /* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
