--- a/client/src/css/ImgSlider.css
+++ b/client/src/css/ImgSlider.css
@@ -14,7 +14,7 @@
 
 .frame {
     height: 60vh;
-    width: 100vw;
+    width: 100%;
     margin: 0vh 0vw;
     background-color: #eee;
     background-position: center;
