--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -53,6 +53,12 @@
   .title{
       font-size: small;
   }
+  .title span img{
+      height: 2px;
+      width: auto;
+      margin-right: 5;
+      margin-left: 8;
+  }
 
 }
 
