--- a/client/src/css/testimonials.css
+++ b/client/src/css/testimonials.css
@@ -201,6 +201,7 @@
 .testimonial4_slide:after {
     content:'';
     background-color: #2f344e;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
     background-size: cover;
     position: absolute;
     top:0px;
@@ -208,7 +209,7 @@
     width:100%;
     height:100%;
     z-index:-1;
-    opacity: 0.4; /* Here is your opacity */
+    opacity: 0.7; /* Here is your opacity */
     border-radius: 15px;
 }
 .testimonial4_slide img {
@@ -231,7 +232,7 @@
     -webkit-box-shadow: -6px 6px 6px rgba(0, 0, 0, 0.23);
 }
 .testimonial4_slide p {
-    color: #303047;
+    color: #c6c6ff;
     font-size: 20px;
     line-height: 1.4;
     margin: 40px 0 20px 0;
@@ -239,6 +240,12 @@
 .testimonial4_slide h4 {
   color: #d1dcfd;
   font-size: 22px;
+}
+
+.testimonial4_slide hr
+{
+  border-top-color:#bbb;
+  opacity:0.5
 }
 
 .testimonial .carousel {
