--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -13,6 +13,13 @@
 
 .jumbotron{
   position: relative;
+    /* overflow: hidden; */
+    /* position: absolute; */
+    /* background: transparent;
+    /* background: url('https://media.giphy.com/media/TgJ0KKEY8HByASy6Jt/giphy.gif') center center no-repeat; */
+    /* background-size: cover; */
+	 /* -webkit-background-clip: text;  */
+	 /* -webkit-text-fill-color: transparent; */
     margin: 0px 0px;
     width: 100%;
     /* opacity: 0.3; */
@@ -136,3 +143,4 @@
       background-image: url('https://unsplash.it/601/601');
     }
   }
+
