--- a/client/src/css/Login.css
+++ b/client/src/css/Login.css
@@ -7,13 +7,19 @@
     height: 100vh; 
     background:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0,0,0,.6)) , url('../components/Pages/aeroclub.jpg') center center no-repeat;
     background-size: cover;
+    color: rgb(226, 222, 222);
   }
   
   .card-signin {
+    position: relative;
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    background: transparent;
+
   }
+
   
   .card-signin .card-title {
     margin-bottom: 2rem;
@@ -31,7 +37,7 @@
   
   .form-signin .btn {
     font-size: 80%;
-    border-radius: 5rem;
+    border-radius: 1rem;
     letter-spacing: .1rem;
     font-weight: bold;
     padding: 1rem;
@@ -45,7 +51,7 @@
   
   .form-label-group input {
     height: auto;
-    border-radius: 2rem;
+    border-radius: 1rem;
   }
   
   .form-label-group>input,
