--- a/client/src/css/Alumni.css
+++ b/client/src/css/Alumni.css
@@ -17,6 +17,44 @@ img {
     height: auto;
     box-sizing: border-box
 }
+
+.pages {
+    height: 40vh;
+    width: 100%;
+    margin: 0vh 0vw;
+
+    /* background-image: url('https://unsplash.it/600/600'); */
+    background-size: cover;
+    padding-bottom: 0px;
+
+    background-color: #eee;
+    background-position: center;
+    /* background-size: cover; */
+    
+    animation: image 3s ease-in-out infinite alternate;
+  }
+
+  .overlay {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    padding-bottom: 80px;
+    color: white;
+    background-color: rgba(0,0,0,0.7);
+}
+
+.titleBold {
+    font-weight: 600;
+}
+.pageTitle {
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 45px;
+    text-align: center;
+    padding-top: 2em;
+}
 /* GRID */
 .grid {
     padding: 0 8vw;
