--- a/client/src/css/testimonials.css
+++ b/client/src/css/testimonials.css
@@ -49,6 +49,7 @@
     content:'';
     background: url(https://images.unsplash.com/photo-1501623021299-5a9e5f95960b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80) center center no-repeat;
     background-size: cover;
+    background-position: center;
     position: absolute;
     top:0px;
     left: 0px;
