--- a/client/src/css/Alumni.css
+++ b/client/src/css/Alumni.css
@@ -18,7 +18,7 @@ img {
     box-sizing: border-box
 }
 
-.pages {
+.pagesa {
     height: 40vh;
     width: 100%;
     margin: 0vh 0vw;
@@ -34,7 +34,7 @@ img {
     animation: image 3s ease-in-out infinite alternate;
   }
 
-  .overlay {
+  .overlaya {
     width: 100%;
     height: 100%;
     position: relative;
@@ -45,10 +45,10 @@ img {
     background-color: rgba(0,0,0,0.7);
 }
 
-.titleBold {
+.titleBolda {
     font-weight: 600;
 }
-.pageTitle {
+.pageTitlea {
     text-transform: uppercase;
     font-weight: 300;
     font-size: 45px;
