--- a/client/src/css/Gallery.css
+++ b/client/src/css/Gallery.css
@@ -27,7 +27,7 @@ img {
     display: block;
 } */
 
-.pages {
+.pagesg {
     height: 40vh;
     width: 100%;
     margin: 0vh 0vw;
@@ -43,7 +43,7 @@ img {
     animation: image 3s ease-in-out infinite alternate;
   }
 
-  .overlay {
+  .overlayg {
     width: 100%;
     height: 100%;
     position: relative;
@@ -54,10 +54,10 @@ img {
     background-color: rgba(0,0,0,0.7);
 }
 
-.titleBold {
+.titleBoldg {
     font-weight: 600;
 }
-.pageTitle {
+.pageTitleg {
     text-transform: uppercase;
     font-weight: 300;
     font-size: 45px;
