--- a/client/src/css/SingleBlog.css
+++ b/client/src/css/SingleBlog.css
@@ -46,7 +46,7 @@ article{
     }
     .body{
         font-size: medium;
-        width: 80vw;
+        /* width: 80vw; */
     }
 }
 @media only screen and (max-width:450px)
