--- a/client/src/css/Alumni.css
+++ b/client/src/css/Alumni.css
@@ -59,7 +59,7 @@ img {
 .grid {
     padding: 0 8vw;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(auto, 1fr);
     grid-template-rows: repeat(auto, 1fr);/*Hauteur des lignes*/
     grid-gap: 20px;
     width: 100%;
@@ -75,7 +75,7 @@ img {
 }
 
 .galery .grid{
-    grid-template-rows: repeat(4, 30vw);
+    grid-template-rows: repeat(auto, 20vw);
     padding: 0;
 }
 
@@ -108,8 +108,8 @@ img {
     height: 100%;
     object-fit: cover;
     transition: transform 400ms ease-out;
-    width: 100%;
-	height: 100%;
+    /* width: 100%;
+	height: 100%; */
   border: solid 10px rgb(179, 179, 179);
 }
 
@@ -123,7 +123,7 @@ img {
 	    /* GALLERY */
     .galery .grid {
         grid-template-columns: repeat(1, 1fr) !important;
-        grid-template-rows: repeat(5, 50vh);
+        grid-template-rows: repeat(2, 50vh);
     }
     
     .item1 {grid-row: 1 ;}
