--- a/client/src/css/Gallery.css
+++ b/client/src/css/Gallery.css
@@ -1,31 +1,25 @@
-/* STRUCTURE */
-/* body {margin: 0; padding-top: 10vh;}  */
-/*Le P-top si header en position fixed/absolu*/
 
 @import url('https://fonts.googleapis.com/css?family=Caveat|Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri&display=swap');
-body * {box-sizing: border-box;}
+/* body * {box-sizing: border-box;} */
+
+/* Design */
+/* *,
+*::before,
+*::after {
+  box-sizing: border-box;
+} */
+
 
 /* CUSTOM */
-img {
+/* img {
     max-width: 100%;
     height: auto;
     box-sizing: border-box
-}
-/* GRID */
-.grid {
-    padding: 0 8vw;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(auto, 1fr);/*Hauteur des lignes*/
-    grid-gap: 20px;
-    width: 100%;
-}
-
-/* div {
-    display: block;
 } */
+/* GRID */
+
 
 .pagesg {
     height: 40vh;
@@ -65,42 +59,189 @@ img {
     padding-top: 2em;
 }
 
-/* GALLERY */
-
-.galery{
-    grid-column: 1 / 13;
-    margin-bottom: 5vh;
+.container.gallery-container {
+    background-color: #fff;
+    color: #35373a;
+    min-height: 100vh;
+    padding: 30px 50px;
 }
 
-.galery .grid{
-    grid-template-rows: repeat(5, 30vw);
-    padding: 0;
-}
-
-.h1 {
-    font-family:  'Audiowide', 'El Messiri', 'Righteous',  sans-serif;
-    letter-spacing: 7px;
-    text-shadow: 2px 2px 2px rgb(250, 110, 110);
-    grid-column: 1 / 13;
-    grid-row: 1;
-    display: flex;
-    justify-content: center;
-    width: 100%;
+.gallery-container h1 {
     text-align: center;
-    margin: 5vh 0;
+    margin-top: 50px;
+    font-family: 'Droid Sans', sans-serif;
+    font-weight: bold;
 }
 
-.item1,.item2,.item3 {grid-row: 1 ;}
-.item4,.item5,.item6 {grid-row: 2 ;}
-.item7,.item8,.item9 {grid-row: 3 ;}
-.item10,.item11,.item12 {grid-row: 4 ;}
-.item13,.item14,.item15 {grid-row: 5 ;}
+.gallery-container p.page-description {
+    text-align: center;
+    margin: 25px auto;
+    font-size: 18px;
+    color: #999;
+}
 
-.item1,.item4,.item7,.item10,.item13 {grid-column: 1 / 5;}
-.item2,.item5,.item8,.item11,.item14 {grid-column: 5 / 9;}
-.item3,.item6,.item9,.item12,.item15 {grid-column: 9 / 13;}
+.tz-gallery {
+    padding: 40px;
+    
+}
 
-.gallery-image {
+.tx-gallery .lightbox img::after {
+  
+}
+
+/* Override bootstrap column paddings */
+.tz-gallery .row > div {
+    padding: 3px;
+    
+}
+
+.tz-gallery .lightbox img {
+    width: 100%;
+    border-radius: 0;
+    position: relative;
+    /* transform: scale(1.15); */
+    
+}
+
+.gallery-imageg {
+  display: block;
+  width: 80%;
+  height: auto;
+  object-fit: cover;
+  transition: transform 400ms ease-out;
+  /* width: 100%;
+height: 100%; */
+/* border: solid 10px rgb(179, 179, 179); */
+}
+
+.gallery-imageg:hover {
+  transform: scale(1.15);
+}
+
+.tz-gallery .lightbox:before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -13px;
+    margin-left: -13px;
+    opacity: 0;
+    color: #fff;
+    font-size: 26px;
+    font-family: 'Glyphicons Halflings';
+    content: '\e003';
+    pointer-events: none;
+    z-index: 9000;
+    transition: 0.4s;
+}
+
+
+.tz-gallery .lightbox:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: rgba(85, 85, 180, 0.336);
+    content: '';
+    /* transform: scale(1.15); */
+    transition: 0.4s;
+}
+
+.tz-gallery .lightbox:hover:after,
+.tz-gallery .lightbox:hover:before {
+  /* transform: scale(1.15); */
+    opacity: 1;
+}
+
+.baguetteBox-button {
+    background-color: transparent !important;
+}
+
+@media(max-width: 768px) {
+    body {
+        padding: 0;
+    }
+}
+
+/* .cont{
+    position: relative;
+    background-color: rgb(240, 240, 240); 
+     opacity: 0.4;
+} */
+
+/* .cont:after {
+    content:'';
+    background-image: url('../components/dronepic.jpg') center center no-repeat;
+    background-size: cover;
+    position: absolute;
+    top:0px;
+    left: 0px;
+    width:100%;
+    height:100%;
+    z-index:-1;
+    opacity: 0.4;
+} */
+/* 
+.main{
+  max-width: 1200px;
+  margin: 0rem auto;
+  padding-bottom: 2rem;
+  background-color: rgb(194, 194, 194);
+  background-size: cover;
+} */
+
+
+/* 
+img {
+  height:35vh;
+  max-height: 100%;
+  max-width: 100%;
+  vertical-align: middle;
+} */
+
+
+
+/* .cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+} */
+/* 
+.cards_item {
+  display: flex;
+  padding: 1rem;
+}
+
+@media (min-width: 40rem) {
+  .cards_item {
+    width: 50%;
+  }
+}
+
+@media (min-width: 56rem) {
+  .cards_item {
+    width: 33.3333%;
+  }
+} */
+
+/* .card {
+  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: row;
+  /* overflow: hidden; */
+/* }  */
+
+
+
+
+/* .card_image {
     display: block;
     width: 100%;
     height: 100%;
@@ -108,55 +249,7 @@ img {
     transition: transform 400ms ease-out;
 }
 
-.gallery-image:hover {
+.card_image:hover {
     transform: scale(1.15);
-}
+} */
 
-
-@media screen and (max-width:619px) 
-{
-	    /* GALLERY */
-    .galery .grid {
-        grid-template-columns: repeat(1, 1fr) !important;
-        grid-template-rows: repeat(5, 50vh);
-    }
-    
-    .item1 {grid-row: 1 ;}
-    .item2 {grid-row: 2 ;}
-    .item3 {grid-row: 3 ;}
-    .item4 {grid-row: 4 ;}
-    .item5 {grid-row: 5 ;}
-    .item6 {grid-row: 6 ;}
-    .item7 {grid-row: 7 ;}
-    .item8 {grid-row: 8 ;}
-    .item9 {grid-row: 9 ;}
-    .item10 {grid-row: 10 ;}
-    .item11 {grid-row: 11 ;}
-    .item12 {grid-row: 12 ;}
-    .item13 {grid-row: 13 ;}
-    .item14 {grid-row: 14 ;}
-    .item15 {grid-row: 15 ;}
-    
-    .item1,.item4,.item7,.item10,.item13,.item2,.item5,.item8,.item11,.item14,.item3,.item6,.item9,.item12,.item15 {grid-column: 1;}
-}
-    
-
-.glow {
-    /* font-size: 70px; */
-    /* color: #ffffff; */
-    /* text-align: center; */
-    -webkit-animation: glow 1s ease-in-out infinite alternate;
-    -moz-animation: glow 1s ease-in-out infinite alternate;
-    animation: glow 1s ease-in-out infinite alternate;
-  }
-  
-  @keyframes glow {
-    from {
-      text-shadow: 0 0 5px #ffffff, 0 0 5px #ffffff, 0 0 5px #eec4c4, 0 0 5px #eeb2b2, 
-                   0 0 5px #ec6464, 0 0 5px #ff1d1d, 0 0 5px #441515;
-    }
-    to {
-      text-shadow: 0 0 5px #eeeeee, 0 0 5px #e7e4fc, 0 0 5px #a4b5fd, 0 0 5px #3b8df8, 
-                   0 0 5px #4057ca, 0 0 5px #1500d1, 0 0 5px #010f61;
-    }
-  }
