--- a/client/src/css/featured-proj.css
+++ b/client/src/css/featured-proj.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+
 /* Design */
 *,
 *::before,
@@ -22,7 +23,7 @@
 
 .cont:after {
     content:'';
-    background: url(https://media.giphy.com/media/o3HczNTgxqNIk/giphy.gif) center center no-repeat;
+    background-image: url('../components/dronepic.jpg') center center no-repeat;
     background-size: cover;
     position: absolute;
     top:0px;
@@ -34,10 +35,11 @@
 }
 
 .main{
-  max-width: 1200px;
-  margin: 0rem auto;
-  padding-bottom: 2rem;
-  /* background-color: rgb(194, 194, 194); */
+  max-width: 1400px;
+  margin: 1rem auto;
+  padding: 0 3rem 2rem 3rem;
+  background-color: rgba(43, 45, 61, 0.144);
+  border-radius: 1.5rem;
   /* background-size: cover; */
 }
 
