--- a/client/src/css/featured-proj.css
+++ b/client/src/css/featured-proj.css
@@ -140,7 +140,7 @@ img {
   }
 }
 
-.card {
+.cardproj {
   background-color: white;
   border-radius: 0.25rem;
   box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
