--- a/client/src/css/Event.css
+++ b/client/src/css/Event.css
@@ -40,7 +40,7 @@ h1.heading {
     margin: 0 0 0.3em;
   }
 } 
-.card {
+.cardev {
   display: block; 
     margin-bottom: 20px;
     line-height: 1.42857143;
@@ -49,7 +49,7 @@ h1.heading {
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); 
     transition: box-shadow .25s; 
 }
-.card:hover {
+.cardev:hover {
   box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .img-card {
@@ -66,16 +66,16 @@ h1.heading {
   object-fit:cover; 
   transition: all .25s ease;
 } 
-.card-content {
+.cardev-content {
   padding:15px;
   text-align:left;
 }
-.card-title {
+.cardev-title {
   margin-top:0px;
   font-weight: 700;
   font-size: 1.65em;
 }
-.card-title a {
+.cardev-title a {
   color: #000;
   text-decoration: none !important;
 }
