--- a/client/src/css/Eventhome.css
+++ b/client/src/css/Eventhome.css
@@ -29,9 +29,10 @@
   @keyframes tickerv {
     0%   {margin-top: 0;}
     /* Quite literally -ve height of wrapper */
-    25%  {margin-top: -26px;} /* 1 X 25 px */
-    50%  {margin-top: -52px;} /* 2 X 25 px */
-    75%  {margin-top: -78px;} /* 3 X 25 px */
+    20%  {margin-top: -26px;} /* 1 X 25 px */
+    40%  {margin-top: -52px;} /* 2 X 25 px */
+    60%  {margin-top: -78px;} /* 3 X 25 px */
+    80%  {margin-top: -104px;} /* Back to first line */
     100% {margin-top: 0;} /* Back to first line */
   }
   .tickerv-wrap ul {
@@ -52,14 +53,17 @@
   .tickerv-wrap ul li {
       background-color: rgba(61, 61, 61, 0.363);
       color: rgb(199, 201, 202);
-    font-size: 18px;
-    line-height: 16px /* Same as wrapper height */
+    font-size: 14px;
+    line-height: 16px;
+    /* padding: 18px; */
+
   }
   .tickerv-wrap ul div {
     /* background-color: rgba(238, 234, 234, 0.363); */
     margin:5px 0;
     border: 5px solid rgb(82, 81, 80);
     border-radius: 5px;
+    
     /* Same as wrapper height */
 }
 
@@ -167,3 +171,19 @@
     padding: 2rem 2rem;
 }
 }
+
+@media (max-width:520px)  {
+  .tickerv-wrap ul div li span{
+    display: none;
+  }
+  .font-change1{
+    font-size: '10px';
+  }
+  .tickerv-wrap ul div li {
+    font-size: '10px';
+    /* padding: 18px; */
+  }
+  .tickerv-wrap{
+    /* padding: 18px; */
+  }
+  }
