chenged complete home page UI

--- a/client/src/css/Contact.css
+++ b/client/src/css/Contact.css
@@ -88,12 +88,12 @@
     background-repeat: no-repeat;
     background-position: center;
 }
-
+/* 
 .white-headingc:after {
     background: url(https://i.ibb.co/d7tSD1R/heading-line-white.png);
     background-repeat: no-repeat;
     background-position: center;
-}
+} */
 
 .headerc span {
     font-size: 18px;
