--- a/client/src/css/footer.css
+++ b/client/src/css/footer.css
@@ -6,11 +6,11 @@
 
 .site-footer
 {
-  background-color:rgb(6, 29, 104);
+  background-color:rgb(204, 67, 67);
   padding:45px 0 20px;
   font-size:15px;
   line-height:24px;
-  color:#949292;
+  color:#ebebeb;
   position:static;
   bottom: 0;
   /* z-index: 1000; */
@@ -18,7 +18,7 @@
 }
 .site-footer hr
 {
-  border-top-color:#bbb;
+  border-top-color:rgb(214, 214, 214);
   opacity:0.5
 }
 .site-footer hr.small
@@ -35,11 +35,11 @@
 }
 .site-footer a
 {
-  color:#cacaca;
+  color:#c7c7c7;
 }
 .site-footer a:hover
 {
-  color:#3366cc;
+  color:#70abe2;
   text-decoration:none;
 }
 #footer-logo{
@@ -57,11 +57,11 @@
 }
 .footer-links a
 {
-  color:#737373
+  color:#d4d4d4
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
-  color:#3366cc;
+  color:#77addf;
   text-decoration:none;
 }
 .footer-links.inline li
@@ -80,7 +80,7 @@
   margin-left:6px;
   margin-right:0;
   border-radius:100%;
-  background-color:#33353d98
+  background-color:#3d333398
 }
 .copyright-text
 {
@@ -119,13 +119,13 @@
 {
   margin-right:15px;
   text-transform:uppercase;
-  color:#96a2b2;
+  color:#b29696;
   font-weight:700;
   font-size:13px
 }
 .social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
+  background-color:#efecec;
+  color:#918181;
   font-size:16px;
   display:inline-block;
   line-height:44px;
@@ -141,7 +141,7 @@
 .social-icons a:active,.social-icons a:focus,.social-icons a:hover
 {
   color:#fff;
-  background-color:#29aafe
+  background-color:#bdbdbd
 }
 .social-icons.size-sm a
 {
@@ -203,7 +203,7 @@
 
 .topBottomMargin{
     padding : 3% 0;
-    background-color:rgba(51, 50, 50, 0.76);
+    background-color:rgba(51, 50, 50, 0);
 }
 
 .wrap{
