--- a/client/src/css/testimonials.css
+++ b/client/src/css/testimonials.css
@@ -256,4 +256,19 @@
     width: 35px;
     height: 35px;
 }
+
+@media (max-width:770px)
+{
+  .testimonial4_slide p {
+    font-size: medium;
+
+}
+}
+@media (max-width:400px)
+{
+  .testimonial4_slide p {
+    font-size: small;
+
+}
+}
 /* ------testimonial  close-------*/
