corrected footer and testimonials

--- a/client/src/css/testimonials.css
+++ b/client/src/css/testimonials.css
@@ -239,7 +239,8 @@
     margin: 40px 0 20px 0;
 }
 .testimonial4_slide h4 {
-  color: rgb(32, 32, 32);
+  color: rgb(202, 202, 202);
+  font-weight: bold;
   font-size: 22px;
 }
 
