--- a/client/src/css/Eventhome.css
+++ b/client/src/css/Eventhome.css
@@ -88,10 +88,10 @@
 }
 
 .miniSep {
-    width: 80px;
-    height: 8px;
+    width: 100px;
+    height: 5px;
     border-radius: 4px;
-    background-color: wheat;
+    background-color: rgb(204, 67, 67);
     /* padding-bottom: 10px; */
     /* background-color: #3500d3; */
     margin: auto;
