--- a/client/src/css/featured-proj.css
+++ b/client/src/css/featured-proj.css
@@ -108,21 +108,22 @@ img:hover {
 }
 
 .btns {
-  color: #ffffff;
+  color: rgb(240, 240, 240);
   padding: 0.8rem;
   font-size: 14px;
   text-transform: uppercase;
-  border-radius: 4px;
+  
+  background-color: rgb(204, 67, 67);
   font-weight: 400;
   display: block;
   width: 100%;
   cursor: pointer;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  background: transparent;
+  border: 1px solid rgba(224, 0, 0, 0.884);
+  /* background: transparent; */
 }
 
 .btns:hover {
-  background-color: rgba(255, 255, 255, 0.12);
+  background-color: rgba(17, 17, 17, 0.856);
 }
 
 
@@ -154,7 +155,7 @@ img:hover {
 
 .cardproj {
   background-color: white;
-  border-radius: 0.25rem;
+  
   box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
@@ -165,13 +166,15 @@ img:hover {
   padding: 1rem;
   background: transparent;
   /* background: linear-gradient(to left, rgb(51, 60, 97), #d1d1d1 100%); */
-  background-color:  rgb(204, 67, 67);
+  /* background-color:  rgb(204, 67, 67); */
+  border:2px solid rgb(204, 67, 67);
+  border-radius: 0px 0px 0.5rem 0.5rem;
   /* opacity: 0.; */
 }
 
 .card_title {
-  color: #ffffff;
-  font-size: 1.1rem;
+  color: rgb(39, 39, 39);;
+  font-size: 1.3rem;
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: capitalize;
@@ -179,8 +182,8 @@ img:hover {
 }
 
 .card_text {
-  color: #ffffff;
-  font-size: 0.875rem;
+  color: rgb(204, 67, 67);
+  font-size: 0.975rem;
   line-height: 1.5;
   margin-bottom: 1.25rem;    
   font-weight: 400;
