--- a/client/src/css/Alumni.css
+++ b/client/src/css/Alumni.css
@@ -10,7 +10,7 @@
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri&display=swap');
 
 
-body * {box-sizing: border-box;}
+/* body * {box-sizing: border-box;} */
 
 
 .overlaya {
@@ -78,11 +78,11 @@ body * {box-sizing: border-box;}
     text-decoration: none;
 }
 
-.container
+.alumni-container
 {
-    font-family:Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif; font-size:14px; 
-    margin:50px auto 0 auto; 
-    width:1024px;
+    font-family:Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif !important; 
+    font-size:14px !important; 
+    margin:50px auto 0 auto !important; 
 }
 .panel{
     margin-bottom:20px; 
