--- a/client/src/css/Alumni.css
+++ b/client/src/css/Alumni.css
@@ -9,10 +9,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri&display=swap');
 
-
-/* body * {box-sizing: border-box;} */
-
-
 .overlaya {
     width: 100%;
     height: 100%;
@@ -60,6 +56,7 @@
 
 .card-item{
     margin: 3rem 3rem;
+    transition: transform 400ms ease-in;
 }
 
 .card-item img{
