--- a/client/src/css/Eventhome.css
+++ b/client/src/css/Eventhome.css
@@ -1,3 +1,5 @@
+
+
 /* .container-fluid{
     margin: 0px 0px;
     width: 100%;
@@ -156,7 +158,7 @@
   
   @keyframes image {
     0% {
-      background-image: url('https://unsplash.it/600/600');
+      background-image: url('http://localhost:5000/images/utils/dronebg.jpg');
     }
     50% {
         background-image: url('https://unsplash.it/602/602');
