--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -146,7 +146,7 @@
 
   @keyframes image {
     0% {
-      background-image: url('https://unsplash.it/600/600');
+      background-image: url('https://scontent.fpat2-1.fna.fbcdn.net/v/t1.0-9/57183771_373888789882332_8657841744391438336_o.jpg?_nc_cat=106&ccb=3&_nc_sid=cdbe9c&_nc_ohc=OVQ7HTH547MAX-aMO0k&_nc_ht=scontent.fpat2-1.fna&oh=541369ecec5f5b38912b70094736f279&oe=6058A746');
     }
     100% {
       background-image: url('https://unsplash.it/601/601');
