--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: 'Montserrat';
   background: linear-gradient(89deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
+  /* background:url(http://localhost:5000/images/utils/drone-1.jpg) center center no-repeat; */
 }
 
 .particles {
