--- a/client/src/css/Sponsor.css
+++ b/client/src/css/Sponsor.css
@@ -5,9 +5,63 @@
     transition: all ease-in-out 0.3s;
     background: #fff;
 }
-.img-wrappere {
+.c1{
+    width: 22rem;
+     height:35rem; 
+}
+.sponimg{
+    width: auto;
+     height:12rem;
+      align-items:center;
+       padding:5px;
+}
+.sponabt{
+    text-decoration:none;
+    font-size:1.8rem; 
+    color:rgb(204, 67, 67);
+}
+/* .img-wrappers {
     width: 20%;
     height: 20%;
     padding: 5px;
+  } */
+  
+  @media screen and (max-width:1000px) 
+  {
+
+    .sponabt{
+        text-decoration:none;
+        font-size:1.2rem; 
+        color:rgb(204, 67, 67);
+    }
+    .card-item img {
+        transform: none !important;
+        transition: none !important;
+        height: 7rem;
+    }
+      .sponimg{
+          width: auto;
+          height: 7rem;
+      }
+
+      .c1{
+        margin:1rem;
+        height: auto;
+      }    
+
+      .txt{
+          display: none;
+      }
+      .img-wrappers {
+        /* width: 80%; */
+        margin-left: 5rem;
+        margin-right: 5rem;
+      }
+      .card-body {
+        flex: 1 1 auto;
+        height: auto;
+        padding: 1rem;
+    }
+
   }
   
